src/objects/Account__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UserCount__c</fullName>
        <label>UserCount</label>
        <summaryForeignKey>User__c.Account_User__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Все</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>One_to_One_Relationship</fullName>
        <active>true</active>
        <errorConditionFormula>UserCount__c&gt;1</errorConditionFormula>
        <errorMessage>У аккаунта не может быть больше одного пользователя</errorMessage>
    </validationRules>
</CustomObject>